# control-algorithm-proj

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.codex/: README.md  context.md  workflow.md
.codex/templates/: task.md
src/: DJG_min_control_双良V5.0.py  hbsai_diagnose_V1.0.py  pid_control_coupled_systems_demo.m  pid_coupled_systems_demo.py  pid_state_space_demo.py  实际运行代码.py
src/lqr/: README.md  ilqr_unicycle_demo.py  lqr_regulator_discrete_demo.py  lqr_tracking_incremental_demo.py
src/mpc/: README.md  linear_mpc_qp_demo.py  linear_mpc_tracking_demo.py  nmpc_unicycle_tracking_demo.py  nonlinear_mpc_casadi_demo.py
src/pid/basic/: pid_demo.py
src/pid/state_space/: pid_control_state_space_demo.m
