[project]
name = "control-algorithm-proj"
version = "0.1.0"
description = "Control algorithm learning project with PID demos and state-space examples"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "scipy>=1.17.1",
]

[dependency-groups]
dev = [
    "black>=26.3.0",
    "pytest>=9.0.2",
    "ruff>=0.15.5",
]

